# dionpy

./: LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml
Plots/: paper.mplstyle
notebooks/: demo.py  interactive.py  make_figs.py
src/dionpy/: constants.py  field.py  functions.py  onion.py  plotting.py  rcs.py
tests/: test_dionpy.py
